--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dự án 3</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Dự án 3</h2>
     <p>Modifying #1</p>
-</body>
+    <p>Modifying #2</p>
+  </body>
 </html>
